Nikhil's Org/src/objects/Test_Object__c.object
<CustomObject>
    <description>Test Objects for Assignment 2</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Account Number</description>
        <label>Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <description>Annual Revenue</description>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Card_number__c</fullName>
        <description>Credit Card number</description>
        <label>Credit Card number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mix_Pct__c</fullName>
        <description>0 - 100 %</description>
        <label>Mix Pct</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Multiple_of_5__c</fullName>
        <description>Multiple of 5</description>
        <label>Multiple of 5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>Postal Code</description>
        <label>Postal Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weekday__c</fullName>
        <description>Weekday</description>
        <label>Weekday</label>
        <type>Date</type>
    </fields>
    <label>Test Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Test Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_number_Validation</fullName>
        <active>true</active>
        <description>Account number Validation</description>
        <errorConditionFormula>NOT(ISNUMBER (Account_Number__c ))</errorConditionFormula>
        <errorDisplayField>Account_Number__c</errorDisplayField>
        <errorMessage>Account number is not a number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Credit_Card_Number_validation</fullName>
        <active>true</active>
        <description>Credit Card Number validation</description>
        <errorConditionFormula>NOT( 
OR( 
 REGEX( Credit_Card_number__c , &quot;[0-9]{4}-[0-9]{4}-[0-9]{4}-[0-9]{4}&quot;), 
REGEX( Credit_Card_number__c , &quot;[0-9]{16}&quot;) 

) 
)</errorConditionFormula>
        <errorDisplayField>Credit_Card_number__c</errorDisplayField>
        <errorMessage>Enter a valid Credit card number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mix_Pct_Validation</fullName>
        <active>true</active>
        <description>Mix Pct  Validations</description>
        <errorConditionFormula>NOT(Mix_Pct__c  &gt; 0.00  &amp;&amp;  Mix_Pct__c  &lt; 100.00)</errorConditionFormula>
        <errorDisplayField>Mix_Pct__c</errorDisplayField>
        <errorMessage>Discount percent within 0 to 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Multiple_of_5_validation</fullName>
        <active>true</active>
        <description>Multiple of 5 validation</description>
        <errorConditionFormula>MOD(Multiple_of_5__c,5) &lt;&gt; 0</errorConditionFormula>
        <errorDisplayField>Multiple_of_5__c</errorDisplayField>
        <errorMessage>Invalid Number 
Please Enter Multiples of 5</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Not_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Account_Number__c ) ||  ISBLANK( Mix_Pct__c ) ||  ISBLANK( Credit_Card_number__c ) || ISBLANK( Multiple_of_5__c )</errorConditionFormula>
        <errorMessage>Please fill the blank section</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Postal_validation</fullName>
        <active>true</active>
        <description>Postal validation</description>
        <errorConditionFormula>AND( 
OR( ISPICKVAL(Country__c,&quot;USA&quot;)), 
NOT(REGEX( Postal_Code__c , &quot;\\d{5}(-\\d{4})?&quot;)),
NOT(REGEX( Postal_Code__c ,  &quot;[0-9]{5}&quot;)) 
)</errorConditionFormula>
        <errorMessage>Invalid USA Postal code</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Weekday_validation</fullName>
        <active>true</active>
        <description>Weekday validation</description>
        <errorConditionFormula>CASE(MOD(  Weekday__c  - DATE(1900, 1, 7), 7),
0, 0,
6, 0,
1) = 0</errorConditionFormula>
        <errorDisplayField>Weekday__c</errorDisplayField>
        <errorMessage>Date must be a weekday</errorMessage>
    </validationRules>
</CustomObject>